--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "prod-build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "abc": "ng update --force @angular/cli@12 @angular/core@12"
+    "e2e": "ng e2e"
   },
   "browser": {
     "http": false,
@@ -26,25 +25,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.16",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
-    "@angular/forms": "~12.2.16",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.2.0",
+    "@angular/common": "~11.1.1",
+    "@angular/compiler": "~11.1.1",
+    "@angular/core": "~11.1.1",
+    "@angular/forms": "~11.1.1",
+    "@angular/material": "^11.2.0",
+    "@angular/platform-browser": "~11.1.1",
+    "@angular/platform-browser-dynamic": "~11.1.1",
+    "@angular/router": "~11.1.1",
     "@emurgo/cardano-serialization-lib-browser": "^9.1.2",
     "@emurgo/cardano-serialization-lib-nodejs": "^9.1.2",
     "@emurgo/cip14-js": "^3.0.1",
     "@harmonicpool/cardano-wallet-interface": "git+https://github.com/HarmonicPool/cardano-wallet-interface.git",
     "@highcharts/map-collection": "^1.1.4",
+    "@horizonx/aptos-wallet-connector": "^0.5.0",
     "@types/underscore": "^1.10.24",
     "@uniswap/sdk": "^3.0.3",
     "angular-bootstrap-md": "^10.1.1",
     "angular-ts-math": "^1.0.7",
+    "aptos": "^1.3.16",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "ethers": "^5.5.1",
@@ -61,7 +62,7 @@
     "ng2-page-scroll": "^4.0.0-beta.12",
     "ng2-tooltip-directive": "^2.10.3",
     "ngx-bootstrap": "^7.1.0",
-    "ngx-clipboard": "^14.0.2",
+    "ngx-clipboard": "^14.0.1",
     "ngx-countdown": "^11.0.3",
     "ngx-pagination": "^5.1.1",
     "ngx-progressive-image-loader": "^4.0.0",
@@ -71,18 +72,18 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "underscore": "^1.13.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
-    "@angular/cli": "~12.2.17",
-    "@angular/compiler-cli": "~12.2.16",
+    "@angular-devkit/build-angular": "~0.1101.2",
+    "@angular/cli": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.17",
+    "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -90,6 +91,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.1.2"
   }
 }
