--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ngx-toastr": "^13.2.0",
     "npm": "^6.14.15",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.6.11",
     "tslib": "^2.0.0",
     "underscore": "^1.13.1",
     "zone.js": "~0.11.3"
